# mesh

./: Cargo.toml  README.md
.github/: renovate.json
.github/workflows/: build.yml  release.yml
lib/: Cargo.toml
lib/src/: lib.rs  mesh.rs  test.rs
mesh-cli/: Cargo.toml
mesh-cli/src/: cli.rs  main.rs
meshes/: Cargo.toml
meshes/src/: conf.rs  mesh.rs  test.rs
src/: cli.rs  conf.rs  lib.rs  main.rs  mesh.rs
