[package]
name = "mesh"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lib"]
resolver = "2"

[dependencies]
meshes = { path = "./lib" }

anyhow = "1.0.94"
clap = { version = "4.5.17", features = ["derive"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rand = "0.8.5"
base64 = "0.22.1"
cidr = "0.3.0"
