[package]
name = "mesh-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mesh"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0"
clap = { version = "^4.5", features = ["derive"] }
x25519-dalek = { version = "^2.0", features = ["static_secrets"] }
rand = "=0.9.2"
base64 = "^0.22"
cidr = "^0.3"

meshes = { path = "../meshes" }
