[package]
name = "mesh-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mesh"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0"
cidr = "^0.3"
clap = { version = "^4.5", features = ["derive"] }
rand = "=0.8.5"

base64 = { workspace = true }
x25519-dalek = { workspace = true }

meshes = { path = "../meshes", version = "*" }
